Worked on responsiveness for contact & checkout page
Edited queries and padding for the pages' containers and blocks

--- a/checkout.html
+++ b/checkout.html
@@ -59,16 +59,6 @@
       <div class="divider">
         <p> Total <span class="price">$210</span> </p>
       </div>
-
-      <!-- <h3 class="larger-element"> Vehicle type: </h3>
-        <form method="get" action="#">
-          <input type="radio" id="car" name="type" value="car">
-          <label for="car">coupe/sedan</label><br>
-          <input type="radio" id="SUV" name="type" value="SUV">
-          <label for="SUV">SUV</label><br>
-          <input type="radio" id="truck" name="type" value="truck">
-          <label for="truck">truck</label><br>
-        </form> -->
     </div>
 
     <div class="block-payment">
@@ -88,14 +78,12 @@
     </div>
 
     <div class="block-payment">
-      <h3 class="larger-element"> Payment info </h3>
+      <h3 class="larger-element"> Payment Info </h3>
       <form method="post" action="#">
         <label class="input-text-label" for="ccname"> Name on card </label>
         <input class="input-text" type="text" id="ccname" name="ccname">
         <label class="input-text-label" for="ccnumber"> Credit card number </label>
-        <!-- <div class="stretch"> -->
         <input class="input-text" type="text" id="ccnumber" name="ccnumber">
-        <!-- </div> -->
         <label class="input-text-label" for="expMonth"> Expiry month </label>
         <input class="input-text" type="text" id="expMonth" name="expMonth">
         <label class="input-text-label" for="expYear"> Expiry year </label>
