Added / updated radio buttons
Added radio buttons for choosing vehicle type to the two detailed services pages, and updated the radio buttons on the checkout page.

--- a/checkout.html
+++ b/checkout.html
@@ -50,15 +50,25 @@
     </div>
   </section>
 
-
   <section class="container-payment">
     <div class="block-payment">
       <h3 class="larger-element"> Cart </h3>
       <p> <a class="link" href="services.html"> Wax & Polish </a> <span class="price">$200</span></p>
-      <p> <a class="link" href="services.html"> Wipe Down</a> <span class="price">$100</span></p>
+      <p> <a class="link" href="services.html"> Wipe Down</a> <span class="price">$10</span></p>
       <div class="divider">
         <p> Total <span class="price">$210</span> </p>
       </div>
+      <h3> Select your vehicle type: </h3>
+      <form method="get" action="#">
+        <input type="radio" id="coupe" name="type" value="coupe">
+        <label for="car"> Coupe </label><br>
+        <input type="radio" id="car" name="type" value="car">
+        <label for="car"> Sedan </label><br>
+        <input type="radio" id="suv" name="type" value="suv">
+        <label for="SUV"> SUV </label><br>
+        <input type="radio" id="truck" name="type" value="truck">
+        <label for="truck"> Truck </label><br>
+      </form>
     </div>
 
     <div class="block-payment">
