--- a/vacuum.html
+++ b/vacuum.html
@@ -58,13 +58,19 @@
 
     <div class="block-detailed-view">
       <h2> What is it?</h2>
-      <p> Whether you need the hardest stains removed to cleaning up crumbs, we'll get your vechicles interior as if it was brand new. We pride ourselves with having the best Vaccuum & Shampoo service you can get. The service includes:
+      <p> Whether you need the hardest stains removed to cleaning up crumbs, we'll get your vechicles interior as if it was brand new. We pride ourselves with having the best Vaccuum & Shampoo service you can get.
       </p>
-      <ul>
-        <li> Full vaccuum </li>
-        <li> Full shampoo </li>
-        <li> Stain removal </li>
-      </ul>
+      <h3> Select your vehicle type: </h3>
+      <form method="get" action="#">
+        <input type="radio" id="coupe" name="type" value="coupe">
+        <label for="car"> Coupe </label><br>
+        <input type="radio" id="car" name="type" value="car">
+        <label for="car"> Sedan </label><br>
+        <input type="radio" id="suv" name="type" value="suv">
+        <label for="SUV"> SUV </label><br>
+        <input type="radio" id="truck" name="type" value="truck">
+        <label for="truck"> Truck </label><br>
+      </form>
       <a class="button-nav" href="checkout.html">Add to Cart - $100</a>
       <a class="button-nav" href="services.html">Back to Services</a>
     </div>
