--- a/wax.html
+++ b/wax.html
@@ -58,13 +58,19 @@
 
       <div class="block-detailed-view">
         <h2> What is it?</h2>
-        <p> Our Wax & Polish service will make your vehicle's paint look brand new again, no matter how worn out and scratched it is. Our highly-trained Detailers use only the best products available on the market. The service includes:
+        <p> Our Wax & Polish service will make your vehicle's paint look brand new again, no matter how worn out and scratched it is. Our Detailers are highly trained and use only the best products on the market.
         </p>
-        <ul>
-          <li> Full hand wash </li>
-          <li> Full paint cut & polish</li>
-          <li> Full body wax </li>
-        </ul>
+        <h3> Select your vehicle type: </h3>
+        <form method="get" action="#">
+          <input type="radio" id="coupe" name="type" value="coupe">
+          <label for="car"> Coupe </label><br>
+          <input type="radio" id="car" name="type" value="car">
+          <label for="car"> Sedan </label><br>
+          <input type="radio" id="suv" name="type" value="suv">
+          <label for="SUV"> SUV </label><br>
+          <input type="radio" id="truck" name="type" value="truck">
+          <label for="truck"> Truck </label><br>
+        </form>
         <a class="button-nav" href="checkout.html">Add to Cart - $200</a>
         <a class="button-nav" href="services.html">Back to Services</a>
       </div>
