--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
         <a href="home.html">
           <span class="auto-detailing-font-top"> AUTO
             <span class="mobile-font-top"> MOBILE </span>
-            <span class="detailing-font-top"> DETAILING </span>
+            <span> DETAILING </span>
           </span>
         </a>
       </div>
@@ -36,17 +36,15 @@
   </nav>
 
   <!-- reference for flexbox gallery for images from https://css-tricks.com/adaptive-photo-layout-with-flexbox/ -->
-  <section>
-    <div class="container">
-      <div class="block">
-        <div class="crop-header">
-          <img src="images/ext.jpg" alt="detailing header">
-        </div>
-        <div class="header-text">
-          <h1>Contact Us</h1>
-          <p>Drop us a message below. </p>
-        </div>
+  <section class="container">
+    <div class="block">
+      <div class="crop-header">
+        <img src="images/ext.jpg" alt="detailing header">
       </div>
+      <header class="header-text">
+        <h1>Contact Us</h1>
+        <p>Drop us a message below. </p>
+      </header>
     </div>
   </section>
 
