--- a/home.html
+++ b/home.html
@@ -36,17 +36,15 @@
   </nav>
 
   <!-- reference for flexbox gallery for images from https://css-tricks.com/adaptive-photo-layout-with-flexbox/ -->
-  <section>
-    <div class="container">
-      <div class="block">
-        <div class="crop-header">
-          <img src="images/ext.jpg" alt="detailing header">
-        </div>
-        <div class="header-text">
-          <h1>About Us</h1>
-          <p> Company updates & who we are.</p>
-        </div>
+  <section class="container">
+    <div class="block">
+      <div class="crop-header">
+        <img src="images/ext.jpg" alt="detailing header">
       </div>
+      <header class="header-text">
+        <h1>About Us</h1>
+        <p> Company updates & who we are.</p>
+      </header>
     </div>
   </section>
 
