--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <a href="home.html">
             <span class="auto-detailing-font-top"> AUTO
               <span class="mobile-font-top"> MOBILE </span>
-              <span class="detailing-font-top"> DETAILING </span>
+              <span> DETAILING </span>
             </span>
           </a>
         </div>
@@ -45,10 +45,10 @@
         <div class="crop-header">
           <img src="images/ext.jpg" alt="detailing header">
         </div>
-        <div class="header-text">
+        <header class="header-text">
           <h1>Style Guide</h1>
           <p>The library used to build our website.</p>
-        </div>
+        </header>
       </div>
     </div>
 
@@ -521,7 +521,7 @@
 
 <!-- CITATIONS -->
     <section id = "citations">
-      <h2>  CITATIONS </h2>
+      <h2>  CITATIONS (for this webpage)</h2>
       <section class = "section-divider">
         <h3> Font </h3>
         <ul>
