--- a/services.html
+++ b/services.html
@@ -20,34 +20,32 @@
         <a href="home.html">
           <span class="auto-detailing-font-top"> AUTO
             <span class="mobile-font-top"> MOBILE </span>
-            <span class="detailing-font-top"> DETAILING </span>
+            <span> DETAILING </span>
           </span>
         </a>
       </div>
       <div class="navbar-buttons">
-      <ul>
-        <li><a class="button-nav" href="home.html">Home</a> </li>
-        <li><a class="button-nav" href="services.html">Services</a> </li>
-        <li><a class="button-nav" href="contact.html">Contact Us</a> </li>
-        <li><a class="button-nav" href="checkout.html">Checkout</a> </li>
-        <li><a class="button-nav" href="index.html">Style Guide</a> </li>
-      </ul>
+        <ul>
+          <li><a class="button-nav" href="home.html">Home</a> </li>
+          <li><a class="button-nav" href="services.html">Services</a> </li>
+          <li><a class="button-nav" href="contact.html">Contact Us</a> </li>
+          <li><a class="button-nav" href="checkout.html">Checkout</a> </li>
+          <li><a class="button-nav" href="index.html">Style Guide</a> </li>
+        </ul>
       </div>
     </div>
   </nav>
 
   <!-- reference for flexbox gallery for images from https://css-tricks.com/adaptive-photo-layout-with-flexbox/ -->
-  <section>
-    <div class="container">
-      <div class="block">
-        <div class="crop-header">
-          <img src="images/ext.jpg" alt="detailing header">
-        </div>
-        <div class="header-text">
-          <h1>Services</h1>
-          <p>Home service. No hassle.</p>
-        </div>
+  <section class="container">
+    <div class="block">
+      <div class="crop-header">
+        <img src="images/ext.jpg" alt="detailing header">
       </div>
+      <header class="header-text">
+        <h1>Services</h1>
+        <p>Home service. No hassle.</p>
+      </header>
     </div>
   </section>
 
@@ -67,7 +65,7 @@
             </div>
           </a>
         </div>
-        <a class="button-nav" href="checkout.html">Add to Cart - $200</a>
+        <a class="button-nav" role="button" href="checkout.html">Add to Cart - $200</a>
       </div>
 
       <div class="block">
@@ -80,7 +78,7 @@
             </div>
           </a>
         </div>
-        <a class="button-nav" href="checkout.html">Add to Cart - $50</a>
+        <a class="button-nav" role="button" href="checkout.html">Add to Cart - $50</a>
       </div>
 
       <div class="block">
@@ -93,8 +91,10 @@
             </div>
           </a>
         </div>
-        <a class="button-nav" href="checkout.html">Add to Cart - $20</a>
+        <a class="button-nav" role="button"  href="checkout.html">Add to Cart - $20</a>
       </div>
+
+    </div>
 
   </section>
 
@@ -113,7 +113,7 @@
             </div>
           </a>
         </div>
-          <a class="button-nav" href="checkout.html">Add to Cart - $20</a>
+        <a class="button-nav" href="checkout.html">Add to Cart - $20</a>
       </div>
 
       <div class="block">
@@ -126,7 +126,7 @@
             </div>
           </a>
         </div>
-          <a class="button-nav" href="checkout.html">Add to Cart - $10</a>
+        <a class="button-nav" href="checkout.html">Add to Cart - $10</a>
       </div>
 
       <div class="block">
@@ -139,7 +139,7 @@
             </div>
           </a>
         </div>
-          <a class="button-nav" href="checkout.html">Add to Cart - $100</a>
+        <a class="button-nav" href="checkout.html">Add to Cart - $100</a>
       </div>
     </div>
 
