--- a/vacuum.html
+++ b/vacuum.html
@@ -20,7 +20,7 @@
         <a href="home.html">
           <span class="auto-detailing-font-top"> AUTO
             <span class="mobile-font-top"> MOBILE </span>
-            <span class="detailing-font-top"> DETAILING </span>
+            <span> DETAILING </span>
           </span>
         </a>
       </div>
@@ -43,10 +43,10 @@
         <div class="crop-header">
           <img src="images/ext.jpg" alt="detailing header">
         </div>
-        <div class="header-text">
+        <header class="header-text">
           <h1>Vaccuum & Shampoo</h1>
-          <p> Included with every Interior Detail service.</p>
-        </div>
+          <p> A detailed overview.</p>
+        </header>
       </div>
     </div>
   </section>
@@ -67,12 +67,12 @@
         <input type="radio" id="car" name="type" value="car">
         <label for="car"> Sedan </label><br>
         <input type="radio" id="suv" name="type" value="suv">
-        <label for="SUV"> SUV </label><br>
+        <label for="suv"> SUV </label><br>
         <input type="radio" id="truck" name="type" value="truck">
         <label for="truck"> Truck </label><br>
       </form>
-      <a class="button-nav" href="checkout.html">Add to Cart - $100</a>
-      <a class="button-nav" href="services.html">Back to Services</a>
+      <a class="button-nav" role="button" href="checkout.html">Add to Cart - $100</a>
+      <a class="button-nav" role="button" href="services.html">Back to Services</a>
     </div>
   </section>
 </body>
