--- a/wax.html
+++ b/wax.html
@@ -20,61 +20,58 @@
         <a href="home.html">
           <span class="auto-detailing-font-top"> AUTO
             <span class="mobile-font-top"> MOBILE </span>
-            <span class="detailing-font-top"> DETAILING </span>
+            <span> DETAILING </span>
           </span>
         </a>
       </div>
       <div class="navbar-buttons">
-      <ul>
-        <li><a class="button-nav" href="home.html">Home</a> </li>
-        <li><a class="button-nav" href="services.html">Services</a> </li>
-        <li><a class="button-nav" href="contact.html">Contact Us</a> </li>
-        <li><a class="button-nav" href="checkout.html">Checkout</a> </li>
-        <li><a class="button-nav" href="index.html">Style Guide</a> </li>
-      </ul>
+        <ul>
+          <li><a class="button-nav" href="home.html">Home</a> </li>
+          <li><a class="button-nav" href="services.html">Services</a> </li>
+          <li><a class="button-nav" href="contact.html">Contact Us</a> </li>
+          <li><a class="button-nav" href="checkout.html">Checkout</a> </li>
+          <li><a class="button-nav" href="index.html">Style Guide</a> </li>
+        </ul>
       </div>
     </div>
   </nav>
 
   <!-- reference for flexbox gallery for images from https://css-tricks.com/adaptive-photo-layout-with-flexbox/ -->
-  <section>
-    <div class="container">
-      <div class="block">
-        <div class="crop-header">
-          <img src="images/ext.jpg" alt="detailing header">
-        </div>
-        <div class="header-text">
-          <h1>Wax & Polish</h1>
-          <p> A detailed overview.</p>
-        </div>
+  <section class="container">
+    <div class="block">
+      <div class="crop-header">
+        <img src="images/ext.jpg" alt="detailing header">
+      </div>
+      <div class="header-text">
+        <h1>Wax & Polish</h1>
+        <p> A detailed overview.</p>
       </div>
     </div>
   </section>
 
-    <section class="container-detailed-view">
-      <div class="block-detailed-view">
-        <img src="images/ext7.jpg" alt="before vs after wax and polish">
-      </div>
+  <section class="container-detailed-view">
+    <div class="block-detailed-view">
+      <img src="images/ext7.jpg" alt="before vs after wax and polish">
+    </div>
 
-      <div class="block-detailed-view">
-        <h2> What is it?</h2>
-        <p> Our Wax & Polish service will make your vehicle's paint look brand new again, no matter how worn out and scratched it is. Our Detailers are highly trained and use only the best products on the market.
-        </p>
-        <h3> Select your vehicle type: </h3>
-        <form method="get" action="#">
-          <input type="radio" id="coupe" name="type" value="coupe">
-          <label for="car"> Coupe </label><br>
-          <input type="radio" id="car" name="type" value="car">
-          <label for="car"> Sedan </label><br>
-          <input type="radio" id="suv" name="type" value="suv">
-          <label for="SUV"> SUV </label><br>
-          <input type="radio" id="truck" name="type" value="truck">
-          <label for="truck"> Truck </label><br>
-        </form>
-        <a class="button-nav" href="checkout.html">Add to Cart - $200</a>
-        <a class="button-nav" href="services.html">Back to Services</a>
-      </div>
+    <div class="block-detailed-view">
+      <h2> What is it?</h2>
+      <p> Our Wax & Polish service will make your vehicle's paint look brand new again, no matter how worn out and scratched it is. Our Detailers are highly trained and use only the best products on the market.
+      </p>
+      <h3> Select your vehicle type: </h3>
+      <form method="get" action="#">
+        <input type="radio" id="coupe" name="type" value="coupe">
+        <label for="car"> Coupe </label><br>
+        <input type="radio" id="car" name="type" value="car">
+        <label for="car"> Sedan </label><br>
+        <input type="radio" id="suv" name="type" value="suv">
+        <label for="SUV"> SUV </label><br>
+        <input type="radio" id="truck" name="type" value="truck">
+        <label for="truck"> Truck </label><br>
+      </form>
+      <a class="button-nav" role="button" href="checkout.html">Add to Cart - $200</a>
+      <a class="button-nav" role="button" href="services.html">Back to Services</a>
+    </div>
 
-    </section>
   </section>
 </body>
