Added footer with links to Citations, Style Guide and Github
Added to all pages, added "container-footer" to "main.css" to style the links

--- a/services.html
+++ b/services.html
@@ -145,4 +145,13 @@
 
   </section>
 
+  <footer>
+      <section class = "section-divider-footer">
+        <div class="container-footer">
+          <a class="link" href="citations.html"> Citations </a>
+          <a class="link" href="index.html"> Style Guide </a>
+          <a class="link" href="https://github.com/Ajxy2/Iat-339-Team-11"> Github </a>
+        </div>
+      </section>
+  </footer>
 </body>
