--- a/index.html
+++ b/index.html
@@ -548,5 +548,15 @@
 
       </section>
     </section>
+
+    <footer>
+        <section class = "section-divider-footer">
+          <div class="container-footer">
+            <a class="link" href="citations.html"> Citations </a>
+            <a class="link" href="index.html"> Style Guide </a>
+            <a class="link" href="https://github.com/Ajxy2/Iat-339-Team-11"> Github </a>
+          </div>
+        </section>
+    </footer>
   </body>
 </html>
