--- a/vacuum.html
+++ b/vacuum.html
@@ -75,4 +75,14 @@
       <a class="button-nav" role="button" href="services.html">Back to Services</a>
     </div>
   </section>
+  
+  <footer>
+      <section class = "section-divider-footer">
+        <div class="container-footer">
+          <a class="link" href="citations.html"> Citations </a>
+          <a class="link" href="index.html"> Style Guide </a>
+          <a class="link" href="https://github.com/Ajxy2/Iat-339-Team-11"> Github </a>
+        </div>
+      </section>
+  </footer>
 </body>
