Updated style guide & nav bar
- Added all the templates to the style guide
- fixed styling for style guide images
- Removed the "style guide" button from the navbar for each page since it was unnecessary (already in footer)

--- a/vacuum.html
+++ b/vacuum.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <title> Vaccuum & Shampoo </title>
+  <title> Vacuum & Shampoo </title>
   <link href="css/main.css" rel="stylesheet">
   <link href="css/queries.css" rel="stylesheet">
 
@@ -30,7 +30,6 @@
         <li><a class="button-nav" href="services.html">Services</a> </li>
         <li><a class="button-nav" href="contact.html">Contact Us</a> </li>
         <li><a class="button-nav" href="checkout.html">Checkout</a> </li>
-        <li><a class="button-nav" href="index.html">Style Guide</a> </li>
       </ul>
       </div>
     </div>
@@ -75,7 +74,7 @@
       <a class="button-nav" role="button" href="services.html">Back to Services</a>
     </div>
   </section>
-  
+
   <footer>
       <section class = "section-divider-footer">
         <div class="container-footer">
