--- a/home.html
+++ b/home.html
@@ -24,13 +24,12 @@
         </a>
       </div>
       <div class="navbar-buttons">
-      <ul>
-        <li><a class="button-nav"  href="home.html">Home</a> </li>
-        <li><a class="button-nav" href="services.html">Services</a> </li>
-        <li><a class="button-nav" href="contact.html">Contact Us</a> </li>
-        <li><a class="button-nav" href="checkout.html">Checkout</a> </li>
-        <li><a class="button-nav" href="index.html">Style Guide</a> </li>
-      </ul>
+        <ul>
+          <li><a class="button-nav" href="home.html">Home</a> </li>
+          <li><a class="button-nav" href="services.html">Services</a> </li>
+          <li><a class="button-nav" href="contact.html">Contact Us</a> </li>
+          <li><a class="button-nav" href="checkout.html">Checkout</a> </li>
+        </ul>
       </div>
     </div>
   </nav>
@@ -48,69 +47,67 @@
     </div>
   </section>
 
-  <section>
-    <div class="container-about-us">
-      <div class="block-about-us">
-        <h2> Company updates </h2>
-        <!-- image from https://www.istockphoto.com/photo/car-polish-wax-worker-hands-applying-protective-tape-before-polishing-buffing-and-gm1060499948-283474997 -->
-        <img src="images/wax.jpg" alt="waxing a car">
-      </div>
+  <section class="container-about-us">
+    <div class="block-about-us">
+      <h2> Company updates </h2>
+      <!-- image from https://www.istockphoto.com/photo/car-polish-wax-worker-hands-applying-protective-tape-before-polishing-buffing-and-gm1060499948-283474997 -->
+      <img src="images/wax.jpg" alt="waxing a car">
+    </div>
 
-      <div class="block-about-us">
-        <p> We will be doing one giveaway a month starting April! If you've booked with us within the past six months or from this point on, you will be automatically included in each month's raffle. Our lucky winners will get to choose between either
-          a Full Exterior Detail or Full Interior Detail, free of charge.
-        </p>
-        <p> Stay tuned for more company updates! We come out with regular updates regarding promos, new products, services, and other company news. If you have any questions, please click <a class="link" href="contact.html"> here </a> to contact us. We
-          typically respond within two business days.
-        </p>
-      </div>
+    <div class="block-about-us">
+      <p> We will be doing one giveaway a month starting April! If you've booked with us within the past six months or from this point on, you will be automatically included in each month's raffle. Our lucky winners will get to choose between either
+        a Full Exterior Detail or Full Interior Detail, free of charge.
+      </p>
+      <p> Stay tuned for more company updates! We come out with regular updates regarding promos, new products, services, and other company news. If you have any questions, please click <a class="link" href="contact.html"> here </a> to contact us. We
+        typically respond within two business days.
+      </p>
+    </div>
 
-      <div class="block-about-us">
-        <h2> Who are we? </h2>
-        <!-- image from http://supremecleanautodetailingla.com/ -->
-        <img src="images/detailers.jpg" alt="picture of staff">
-      </div>
+    <div class="block-about-us">
+      <h2> Who are we? </h2>
+      <!-- image from http://supremecleanautodetailingla.com/ -->
+      <img src="images/detailers.jpg" alt="picture of staff">
+    </div>
 
-      <div class="block-about-us">
-        <p> Automobile Detailing is a mobile automotive detailing company. We come to your home and make the interior and exterior of your vehicle look brand new! This includes carpet steaming, full waxes, and much more to restore the look of your
-          vehicle.
-        </p>
-        <p> Our services appeal to anyone wanting their vehicle to look showroom ready for personal satisfaction, maintenance, or in preparation for a sale. We are a convenient solution to people who do not have the time or equipment to make their
-          vehicles look new again. Our services appeal to anyone wanting their vehicle to look showroom ready for personal satisfaction, maintenance, or in preparation for a sale.
-        </p>
-      </div>
+    <div class="block-about-us">
+      <p> Automobile Detailing is a mobile automotive detailing company. We come to your home and make the interior and exterior of your vehicle look brand new! This includes carpet steaming, full waxes, and much more to restore the look of your
+        vehicle.
+      </p>
+      <p> Our services appeal to anyone wanting their vehicle to look showroom ready for personal satisfaction, maintenance, or in preparation for a sale. We are a convenient solution to people who do not have the time or equipment to make their
+        vehicles look new again. Our services appeal to anyone wanting their vehicle to look showroom ready for personal satisfaction, maintenance, or in preparation for a sale.
+      </p>
+    </div>
 
-      <div class="block-about-us">
-        <h2> Some clients who love us are: </h2>
-        <!-- image from https://premium.goauto.com.au/subaru-shifts-to-family-values/ -->
-        <img src="images/family.jpg" alt="picture of happy customers">
-      </div>
+    <div class="block-about-us">
+      <h2> Some clients who love us are: </h2>
+      <!-- image from https://premium.goauto.com.au/subaru-shifts-to-family-values/ -->
+      <img src="images/family.jpg" alt="picture of happy customers">
+    </div>
 
-      <div class="block-about-us">
-        <p> Meticulous car owners who: </p>
-        <ul>
-          <li> want to keep their vehicle in mint condition </li>
-          <li> have a vehicle of sentimental value </li>
-          <li> want to maximize the resale value of a vehicle </li>
-        </ul>
+    <div class="block-about-us">
+      <p> Meticulous car owners who: </p>
+      <ul>
+        <li> want to keep their vehicle in mint condition </li>
+        <li> have a vehicle of sentimental value </li>
+        <li> want to maximize the resale value of a vehicle </li>
+      </ul>
 
-        <p> Parents who: </p>
-        <ul>
-          <li> have young kids </li>
-          <li> own a minivan / SUV </li>
-          <li> have a vehicle that is beat up from constant family use </li>
-        </ul>
-      </div>
+      <p> Parents who: </p>
+      <ul>
+        <li> have young kids </li>
+        <li> own a minivan / SUV </li>
+        <li> have a vehicle that is beat up from constant family use </li>
+      </ul>
     </div>
   </section>
 
   <footer>
-      <section class = "section-divider-footer">
-        <div class="container-footer">
-          <a class="link" href="citations.html"> Citations </a>
-          <a class="link" href="index.html"> Style Guide </a>
-          <a class="link" href="https://github.com/Ajxy2/Iat-339-Team-11"> Github </a>
-        </div>
-      </section>
+    <section class="section-divider-footer">
+      <div class="container-footer">
+        <a class="link" href="citations.html"> Citations </a>
+        <a class="link" href="index.html"> Style Guide </a>
+        <a class="link" href="https://github.com/Ajxy2/Iat-339-Team-11"> Github </a>
+      </div>
+    </section>
   </footer>
 </body>
